[gd_scene load_steps=2 format=3 uid="uid://dkgxji66brw7e"]

[ext_resource type="Script" path="res://Scenes/Multiplayer/Server.gd" id="1_nwqde"]

[node name="Lobby" type="Node"]
script = ExtResource("1_nwqde")

[node name="Host" type="Button" parent="."]
offset_left = 93.0
offset_top = 79.0
offset_right = 101.0
offset_bottom = 87.0
text = "Host"

[node name="Join" type="Button" parent="."]
offset_left = 93.0
offset_top = 143.0
offset_right = 137.0
offset_bottom = 174.0
text = "Join"

[node name="StartGame" type="Button" parent="."]
offset_left = 93.0
offset_top = 224.0
offset_right = 137.0
offset_bottom = 255.0
text = "Start Game"

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 255.0
offset_top = 61.0
offset_right = 322.063
offset_bottom = 92.0

[node name="Label" type="Label" parent="LineEdit"]
layout_mode = 0
offset_left = -53.0
offset_top = 3.0
offset_right = -6.0
offset_bottom = 26.0
text = "Name"

[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="StartGame" to="." method="_on_start_game_pressed"]
